--- a/applications/dashboard/styleguide/section-3.html
+++ b/applications/dashboard/styleguide/section-3.html
@@ -29,6 +29,12 @@
           <li><a href="section-3.html">3.0: Forms</a></li>
           <li><a href="section-4.html">4.0: Buttons</a></li>
           <li><a href="section-6.html">6.0: Components</a></li>
+          <li><a href="section-Alerts.html">Alerts.0: ## Alerts</a></li>
+          <li><a href="section-Attachments.html">Attachments.0: # Attachments</a></li>
+          <li><a href="section-Attachments.html">Attachments.0: ## Item attachments</a></li>
+          <li><a href="section-Definitions.html">Definitions.0: ## Definition lists</a></li>
+          <li><a href="section-Item.html">Item.0: ## Base item</a></li>
+          <li><a href="section-Media.html">Media.0: ## Media objects</a></li>
           <li><a href="section-Section 4.html">Section 4.0: Section 4</a></li>
         </ul>
       </nav>
