--- a/applications/dashboard/styleguide/section-attachments.html
+++ b/applications/dashboard/styleguide/section-attachments.html
@@ -45,7 +45,17 @@
 
               <section class="kss-depth-1">
                 <div class="component-description">
-                  <h1 class="kss-title" id="section-4">Section 4</h1>
+                  <h1 class="kss-title" id="attachments"># Attachments</h1>
+
+
+              <div class="kss-box"><p>Components for Attachments.</p>
+</div>
+
+              </div><!-- // closes .component-description -->
+            </section>
+              <section class="kss-depth-1">
+                <div class="component-description">
+                  <h1 class="kss-title" id="attachments">## Item attachments</h1>
 
 
 
@@ -53,8 +63,8 @@
             </section>
               <section class="kss-depth-2">
                 <div class="component-description">
-                  <h2 class="kss-title" id="section-4-1-choose-your-own-adventure-nav">
-                    <span class="kss-ref badge pull-right">section-4-1-choose-your-own-adventure-nav</span> &lt;div class=&quot;nav nav-adventure&quot;&gt;   &lt;div class=&quot;nav-item&quot;&gt;     &lt;a class=&quot;nav-link&quot; href=&quot;#&quot;&gt;       &lt;div class=&quot;nav-item-icon&quot;&gt;&lt;svg&gt;&lt;/svg&gt;&lt;/div&gt;       &lt;div class=&quot;nav-item-content&quot;&gt;         &lt;div class=&quot;nav-item-title&quot;&gt;Here&#x27;s the nav title&lt;/div&gt;         &lt;div class=&quot;nav-item-description&quot;&gt;           Here&#x27;s some expanatory text about where you&#x27;re headed if you select this item.         &lt;/div&gt;       &lt;/div&gt;       &lt;div class=&quot;nav-item-arrow&quot;&gt;&lt;svg&gt;&lt;/svg&gt;&lt;/div&gt;     &lt;/a&gt;   &lt;/div&gt; &lt;/div&gt;
+                  <h2 class="kss-title" id="attachments-utilities">
+                    <span class="kss-ref badge pull-right">attachments-utilities</span> ## Utilities
                   </h2>
 
 
@@ -65,9 +75,12 @@
         <div class="col-xs-6 col-sm-3" id="sidebar">
           <div class="list-group" data-spy="affix">
                 <!--<li><a href="#" class="list-group-item disabled">
-                  <h4 class="list-group-item-heading">Section 4</h4>
+                  <h4 class="list-group-item-heading"># Attachments</h4>
                 </a></li>-->
-                <a class="list-group-item" href="#section-4-1-choose-your-own-adventure-nav"><!--<span class="kss-ref badge" >section-4-1-choose-your-own-adventure-nav</span> -->&lt;div class=&quot;nav nav-adventure&quot;&gt;   &lt;div class=&quot;nav-item&quot;&gt;     &lt;a class=&quot;nav-link&quot; href=&quot;#&quot;&gt;       &lt;div class=&quot;nav-item-icon&quot;&gt;&lt;svg&gt;&lt;/svg&gt;&lt;/div&gt;       &lt;div class=&quot;nav-item-content&quot;&gt;         &lt;div class=&quot;nav-item-title&quot;&gt;Here&#x27;s the nav title&lt;/div&gt;         &lt;div class=&quot;nav-item-description&quot;&gt;           Here&#x27;s some expanatory text about where you&#x27;re headed if you select this item.         &lt;/div&gt;       &lt;/div&gt;       &lt;div class=&quot;nav-item-arrow&quot;&gt;&lt;svg&gt;&lt;/svg&gt;&lt;/div&gt;     &lt;/a&gt;   &lt;/div&gt; &lt;/div&gt;</a>
+                <!--<li><a href="#" class="list-group-item disabled">
+                  <h4 class="list-group-item-heading">## Item attachments</h4>
+                </a></li>-->
+                <a class="list-group-item" href="#attachments-utilities"><!--<span class="kss-ref badge" >attachments-utilities</span> -->## Utilities</a>
           </div>
         </div>
       </div>
