--- a/applications/dashboard/styleguide/section-10.html
+++ b/applications/dashboard/styleguide/section-10.html
@@ -99,89 +99,215 @@
   <div class="panel panel-help panel-right">
     <div class="panel-content-wrapper">
       <div id="fixed-help" class="js-fluid-fixed panel-content">
+        <ul class="nav nav-pills" data-spy="affix">
+          <!--<li><a href="#" class="list-group-item disabled">
+            <h4 class="list-group-item-heading">Modals</h4>
+          </a></li>-->
+          <li><a href="#10-1" class="nav-link"><!--<span class="kss-ref badge" >10-1</span> -->Modal Parsing</a></li>
+          <li><a href="#10-2" class="nav-link"><!--<span class="kss-ref badge" >10-2</span> -->Modal Sizes and Placement</a></li>
+          <li><a href="#10-4" class="nav-link"><!--<span class="kss-ref badge" >10-4</span> -->Modal Types</a></li>
+          <li><a href="#10-5" class="nav-link"><!--<span class="kss-ref badge" >10-5</span> -->Overriding Content</a></li>
+        </ul>
       </div>
     </div>
   </div>
   <div class="main">
     <div class="content">
-      <h1>Vanilla Dashboard Styleguide</h1>
-      <div class="padded"> <p>Welcome to the Vanilla Dashboard Styleguide!</p>
-<p>This styleguide covers the Vanilla dashboard styling.</p>
-<p>The goals of this styleguide are</p>
-<ul>
-    <li>to showcase the components we use in the dashboard, so you can easily mix-and-match to build your own settings page;</li>
-    <li>to ensure a streamlined appearance;</li>
-    <li>to ensure a reliable and expected UX;</li>
-    <li>to cross-reference PHP rendering helpers.</li>
-</ul>
 
-<h2 class="subheading-border">Workflow</h2>
 
-<p><h3>Grunt Tasks</h3></p>
-<div>
-    More to come...
+          <h1 class="kss-title" id="10">Modals</h1>
+          </section>
+          <section class="kss-depth-2">
+            <div class="kss-component">
+              <div class="kss-component-description row full-border">
+                <h2 class="kss-title padded" id="10-1">
+                <span class="kss-ref badge pull-right">10-1</span> Modal Parsing
+                </h2>
+
+
+                <div class="kss-box padded"><p>We parse the body for an h1 element and put it in the header, and if there&#39;s a <code>.js-modal-footer</code> element, we add it
+to the modal footer.</p>
 </div>
 
-<h2 class="subheading-border">Vendor Dependencies</h2>
+                <pre class="prettyprint lang-html padded-bottom" style="background-color: #fff">&lt;a href=&quot;./public/resources/pages/example-modal.json&quot; class=&quot;js-modal&quot;&gt;
+  I&#x27;ll render the data from the example modal json file in a popup
+&lt;/a&gt;</pre>
+              </div>
+              <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Default styling</span></div>
+              <div class="kss-example padded-bottom"><a href="./public/resources/pages/example-modal.json" class="js-modal">
+  I'll render the data from the example modal json file in a popup
+</a></div>
+          </section>
+          <section class="kss-depth-3">
+            <div class="kss-component">
+              <div class="kss-component-description row full-border">
+                <h3 class="kss-title padded" id="10-1-1">
+                <span class="kss-ref badge pull-right">10-1-1</span> Modal Form Parsing
+                </h3>
 
-<p><h3>Twitter Bootstrap (twbs)</h3></p>
-<p><h4>twbs SASS</h4></p>
-<div>
-   More to come...
-</div>
-<h4>twbs Javascript</h4>
-<div>
-    More to come...
-</div>
 
-<p><h3>Ace</h3></p>
-<div>
-    We use ace for our code editor in the Pockets and Customize Theme plugins.
-</div>
-
-<p><h3>Google Prettify</h3></p>
-<div>
-    We use google prettify to add syntax highlighting to our code and pre blocks.
+                <div class="kss-box padded"><p>We check the body for a form and add the form buttons into the footer and the h1 into the header.</p>
 </div>
 
-<p><h3>iCheck</h3></p>
-<div>
-    We use iCheck for our radio and checkboxes.
+                <pre class="prettyprint lang-html padded-bottom" style="background-color: #fff">&lt;a href=&quot;./public/resources/pages/example-modal-form.json&quot; class=&quot;js-modal&quot;&gt;
+  I&#x27;ll render the data from the example modal form json file in a popup
+&lt;/a&gt;</pre>
+              </div>
+              <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Default styling</span></div>
+              <div class="kss-example padded-bottom"><a href="./public/resources/pages/example-modal-form.json" class="js-modal">
+  I'll render the data from the example modal form json file in a popup
+</a></div>
+          </section>
+          <section class="kss-depth-2">
+            <div class="kss-component">
+              <div class="kss-component-description row full-border">
+                <h2 class="kss-title padded" id="10-2">
+                <span class="kss-ref badge pull-right">10-2</span> Modal Sizes and Placement
+                </h2>
+
+
+                <div class="kss-box padded"><p>You can choose different sizes and placements for you modals. The default leaves 3% of the viewport height at the
+top and bottom of the page. <code>.modal-center</code> leaves 25% at the top and bottom of the page. Smaller modals are good
+for confirm-type messages and can make short settings pages look less awkward.</p>
 </div>
 
-<p><h3>Drop</h3></p>
-<div>
-    We use drop for our user card dropdown...
+                <pre class="prettyprint lang-html padded-bottom" style="background-color: #fff">&lt;a href=&quot;./public/resources/pages/example-modal.json&quot; class=&quot;js-modal&quot; data-content=&#x27;{&quot;cssClass&quot;:&quot;[modifier class]&quot;}&#x27;&gt;
+  Click me!
+&lt;/a&gt;</pre>
+              </div>
+              <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Default styling</span></div>
+              <div class="kss-example padded-bottom"><a href="./public/resources/pages/example-modal.json" class="js-modal" data-content='{"cssClass":"[modifier class]"}'>
+  Click me!
+</a></div>
+              <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Small modal</span> <span class="pull-right"><code>.modal-sm</code></span></div>
+              <div class="kss-example padded-bottom"><a href="./public/resources/pages/example-modal.json" class="js-modal" data-content='{"cssClass":"modal-sm"}'>
+  Click me!
+</a></div>
+              <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Medium modal</span> <span class="pull-right"><code>.modal-md</code></span></div>
+              <div class="kss-example padded-bottom"><a href="./public/resources/pages/example-modal.json" class="js-modal" data-content='{"cssClass":"modal-md"}'>
+  Click me!
+</a></div>
+              <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">A modal more vertically centered.</span> <span class="pull-right"><code>.modal-center</code></span></div>
+              <div class="kss-example padded-bottom"><a href="./public/resources/pages/example-modal.json" class="js-modal" data-content='{"cssClass":"modal-center"}'>
+  Click me!
+</a></div>
+          </section>
+          <section class="kss-depth-2">
+            <div class="kss-component">
+              <div class="kss-component-description row full-border">
+                <h2 class="kss-title padded" id="10-4">
+                <span class="kss-ref badge pull-right">10-4</span> Modal Types
+                </h2>
+
+
+                <div class="kss-box padded"><p>There are two modal types over the default modal:</p>
+<p><code>noheader</code>: A modal without a header <br>
+<code>confirm</code>: A modal that navigates to the url if the user confirms and cancels the navigation if the user declines</p>
 </div>
 
-<p><h3>ScrollToFixed</h3></p>
-<div>
-    ScrollToFixed manages our navbar...
+          </section>
+          <section class="kss-depth-3">
+            <div class="kss-component">
+              <div class="kss-component-description row full-border">
+                <h3 class="kss-title padded" id="10-4-1">
+                <span class="kss-ref badge pull-right">10-4-1</span> Modal Without a Header
+                </h3>
+
+
+                <div class="kss-box padded"><p>This modal won&#39;t parse the content for an h1 and add it to the top. The close icon will appear over the modal
+content.</p>
 </div>
 
-<h2 class="subheading-border">Other Dependencies</h2>
+                <pre class="prettyprint lang-html padded-bottom" style="background-color: #fff">&lt;a href=&quot;./public/resources/pages/example-modal.json&quot; class=&quot;js-modal&quot; data-modal-type=&quot;noheader&quot;&gt;
+  Headless
+&lt;/a&gt;</pre>
+              </div>
+              <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Default styling</span></div>
+              <div class="kss-example padded-bottom"><a href="./public/resources/pages/example-modal.json" class="js-modal" data-modal-type="noheader">
+  Headless
+</a></div>
+          </section>
+          <section class="kss-depth-3">
+            <div class="kss-component">
+              <div class="kss-component-description row full-border">
+                <h3 class="kss-title padded" id="10-4-2">
+                <span class="kss-ref badge pull-right">10-4-2</span> Modal Confirm
+                </h3>
 
-<p><h3>FluidFixed</h3></p>
-<div>
-    Panel Scrolling
+
+                <div class="kss-box padded"><p>This modal navigates to the url if the user confirms and cancels the navigation if the user declines. It&#39;s often
+paired with <code>.js-hijack</code> to delete content at the given endpoint. By default, the confirm modal has the <code>.modal-sm</code>
+class attached to it, but this can be overridden.</p>
 </div>
 
-<p><h3>TableJenga</h3></p>
-<div>
-    Table Responsiveness
-</div>
+                <pre class="prettyprint lang-html padded-bottom" style="background-color: #fff">&lt;a href=&quot;#&quot; class=&quot;js-modal&quot; data-modal-type=&quot;confirm&quot;&gt;
+  I&#x27;m a confirm modal
+&lt;/a&gt;
+&lt;br&gt;
+&lt;a href=&quot;#&quot; class=&quot;js-modal-confirm&quot;&gt;
+  I&#x27;m also a confirm modal
+&lt;/a&gt;</pre>
+              </div>
+              <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Default styling</span></div>
+              <div class="kss-example padded-bottom"><a href="#" class="js-modal" data-modal-type="confirm">
+  I'm a confirm modal
+</a>
+<br>
+<a href="#" class="js-modal-confirm">
+  I'm also a confirm modal
+</a></div>
+          </section>
+          <section class="kss-depth-2">
+            <div class="kss-component">
+              <div class="kss-component-description row full-border">
+                <h2 class="kss-title padded" id="10-5">
+                <span class="kss-ref badge pull-right">10-5</span> Overriding Content
+                </h2>
 
 
-<h2 class="subheading-border">Tips and Tricks</h2>
+                <div class="kss-box padded"><p>As we saw in section 10.2., you can override the css class of a modal by setting the data content attribute.
+You can also override the following settings: <code>title</code>, <code>body</code>, <code>footer</code> and <code>closeIcon</code></p>
+</div>
 
-<p><h3>Avoid going rogue when building your own settings page</h3></p>
-<div>
-    Try not to add css, whether it&#39;s inline, or contained in an internal or external stylesheet.
-    Optimally, we want to have all of the dashboard&#39;s css in the admin.css file.
-    This encourages developers to use existing patterns. If a necessary pattern doesn&#39;t exist,
-    we can build it with the help of our design team (aka Dan).
+          </section>
+          <section class="kss-depth-3">
+            <div class="kss-component">
+              <div class="kss-component-description row full-border">
+                <h3 class="kss-title padded" id="10-5-1">
+                <span class="kss-ref badge pull-right">10-5-1</span> Overriding Regular Modal Text
+                </h3>
+
+
+
+                <pre class="prettyprint lang-html padded-bottom" style="background-color: #fff">&lt;a href=&quot;./public/resources/pages/example-modal.json&quot; class=&quot;js-modal&quot; data-content=&#x27;{&quot;title&quot;:&quot;A New Title&quot;,&quot;body&quot;:&quot;&lt;div class=\&quot;padded\&quot;&gt;A New Body&lt;/div&gt;&quot;}&#x27;&gt;
+  I&#x27;ve overriden the modal text
+&lt;/a&gt;</pre>
+              </div>
+              <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Default styling</span></div>
+              <div class="kss-example padded-bottom"><a href="./public/resources/pages/example-modal.json" class="js-modal" data-content='{"title":"A New Title","body":"<div class=\"padded\">A New Body</div>"}'>
+  I've overriden the modal text
+</a></div>
+          </section>
+          <section class="kss-depth-3">
+            <div class="kss-component">
+              <div class="kss-component-description row full-border">
+                <h3 class="kss-title padded" id="10-5-2">
+                <span class="kss-ref badge pull-right">10-5-2</span> Overriding Modal Confirm Text
+                </h3>
+
+
+                <div class="kss-box padded"><p>Like regular modals, the text for a confirm modal can be overridden.</p>
 </div>
-</div>
+
+                <pre class="prettyprint lang-html padded-bottom" style="background-color: #fff">&lt;a href=&quot;#&quot; class=&quot;js-modal-confirm&quot; data-content=&#x27;{&quot;title&quot;:&quot;HEY YOU!&quot;, &quot;body&quot;:&quot;Do you really wanna do this?&quot;}&#x27;&gt;
+  I&#x27;ve overridden the confirm modal text
+&lt;/a&gt;</pre>
+              </div>
+              <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Default styling</span></div>
+              <div class="kss-example padded-bottom"><a href="#" class="js-modal-confirm" data-content='{"title":"HEY YOU!", "body":"Do you really wanna do this?"}'>
+  I've overridden the confirm modal text
+</a></div>
+          </section>
     </div>
     <div class="footer">
       <div class="footer-logo logo-wrap">
