--- a/applications/dashboard/styleguide/section-13.html
+++ b/applications/dashboard/styleguide/section-13.html
@@ -99,89 +99,48 @@
   <div class="panel panel-help panel-right">
     <div class="panel-content-wrapper">
       <div id="fixed-help" class="js-fluid-fixed panel-content">
+        <ul class="nav nav-pills" data-spy="affix">
+          <!--<li><a href="#" class="list-group-item disabled">
+            <h4 class="list-group-item-heading">Dropdowns</h4>
+          </a></li>-->
+          <!--<li><a href="#" class="list-group-item disabled">
+            <h4 class="list-group-item-heading">Toasters</h4>
+          </a></li>-->
+          <li><a href="#13-1" class="nav-link"><!--<span class="kss-ref badge" >13-1</span> -->Dropdowns</a></li>
+        </ul>
       </div>
     </div>
   </div>
   <div class="main">
     <div class="content">
-      <h1>Vanilla Dashboard Styleguide</h1>
-      <div class="padded"> <p>Welcome to the Vanilla Dashboard Styleguide!</p>
-<p>This styleguide covers the Vanilla dashboard styling.</p>
-<p>The goals of this styleguide are</p>
-<ul>
-    <li>to showcase the components we use in the dashboard, so you can easily mix-and-match to build your own settings page;</li>
-    <li>to ensure a streamlined appearance;</li>
-    <li>to ensure a reliable and expected UX;</li>
-    <li>to cross-reference PHP rendering helpers.</li>
-</ul>
 
-<h2 class="subheading-border">Workflow</h2>
 
-<p><h3>Grunt Tasks</h3></p>
-<div>
-    More to come...
+          <h1 class="kss-title" id="13">Dropdowns</h1>
+          </section>
+          <h1 class="kss-title" id="13">Toasters</h1>
+            <div class="kss-box">
+              <div class="padded"><p>Toasters.</p>
+</div>
+            </div>
+          </section>
+          <section class="kss-depth-2">
+            <div class="kss-component">
+              <div class="kss-component-description row full-border">
+                <h2 class="kss-title padded" id="13-1">
+                <span class="kss-ref badge pull-right">13-1</span> Dropdowns
+                </h2>
+
+
+                <div class="kss-box padded"><p>The flex css class aligns its items in the center vertically, and justifies them with the space-between property.
+It also add a small margin to its items. Most of the flex elements in the dashboard elements use these properties.</p>
+<p>PHP rendering: Use the <code>dropdown-twbs</code> view using the Dropdown Module.</p>
 </div>
 
-<h2 class="subheading-border">Vendor Dependencies</h2>
-
-<p><h3>Twitter Bootstrap (twbs)</h3></p>
-<p><h4>twbs SASS</h4></p>
-<div>
-   More to come...
-</div>
-<h4>twbs Javascript</h4>
-<div>
-    More to come...
-</div>
-
-<p><h3>Ace</h3></p>
-<div>
-    We use ace for our code editor in the Pockets and Customize Theme plugins.
-</div>
-
-<p><h3>Google Prettify</h3></p>
-<div>
-    We use google prettify to add syntax highlighting to our code and pre blocks.
-</div>
-
-<p><h3>iCheck</h3></p>
-<div>
-    We use iCheck for our radio and checkboxes.
-</div>
-
-<p><h3>Drop</h3></p>
-<div>
-    We use drop for our user card dropdown...
-</div>
-
-<p><h3>ScrollToFixed</h3></p>
-<div>
-    ScrollToFixed manages our navbar...
-</div>
-
-<h2 class="subheading-border">Other Dependencies</h2>
-
-<p><h3>FluidFixed</h3></p>
-<div>
-    Panel Scrolling
-</div>
-
-<p><h3>TableJenga</h3></p>
-<div>
-    Table Responsiveness
-</div>
-
-
-<h2 class="subheading-border">Tips and Tricks</h2>
-
-<p><h3>Avoid going rogue when building your own settings page</h3></p>
-<div>
-    Try not to add css, whether it&#39;s inline, or contained in an internal or external stylesheet.
-    Optimally, we want to have all of the dashboard&#39;s css in the admin.css file.
-    This encourages developers to use existing patterns. If a necessary pattern doesn&#39;t exist,
-    we can build it with the help of our design team (aka Dan).
-</div>
-</div>
+                <pre class="prettyprint lang-html padded-bottom" style="background-color: #fff">Markup:</pre>
+              </div>
+              <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Default styling</span></div>
+              <div class="kss-example padded-bottom">Markup:</div>
+          </section>
     </div>
     <div class="footer">
       <div class="footer-logo logo-wrap">
